--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 <h2>写真</h2>
 <div class="pictures">
    <img src="tamago.jpg" alt="東京タワーから見た夜景" />
+  <img src="qr.png" alt="QRコード" />
 <img src="https://i.imgur.com/pAQ7QKc.jpg" alt="高尾山から見た朝焼け" />
 </div>
        <h2>お問い合わせ</h2>
