--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
          </style>
 </head>
  <body>
-<h1>のホームページ</h1>
+<h1>安部和加子のホームページ</h1>
 
 <main>
 
@@ -81,18 +81,18 @@
 <h2>写真</h2>
 <div class="pictures">
    <img src="tamago.jpg" alt="東京タワーから見た夜景" />
-  <img src="qr.png" alt="QRコード" />
+   <img src="qr.png" alt="QRコード" />
 <img src="https://i.imgur.com/pAQ7QKc.jpg" alt="高尾山から見た朝焼け" />
 </div>
        <h2>お問い合わせ</h2>
        <form action="http://soasa.starfree.jp/form.php">
-         名前: <input type="text" name="name" placeholder="電通太郎" />
+         名前: <input type="text" name="name" placeholder="苗字名前" />
          <br />
-         <input type="radio" name="animal" value="dog" />犬派
-         <input type="radio" name="animal" value="cat" />猫派
+         <input type="radio" name="animal" value="dog" />きのこ派
+         <input type="radio" name="animal" value="cat" />たけのこ派
          <input type="radio" name="animal" value="other" />その他
          <br />
-         <input type="checkbox" name="music" />楽器経験がある
+         <input type="checkbox" name="music" />筋トレ経験がある
          <br />
          <textarea name="comment"></textarea>
          <br />
