--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
          </style>
 </head>
  <body>
-<h1>安部和加子のホームページ</h1>
+<h1>のホームページ</h1>
 
 <main>
 
@@ -74,14 +74,13 @@
 </ul>
 <h2>おすすめ小説ランキング</h2>
 <ol>
-    <li>シェイクスピア物語</li>
-    <li>台所の音：濃紺</li>
-    <li>高慢と偏見</li>
+    <li>シェイクスピア物語・・・中１の読書の時間で読んでいた。家の本棚の中で一番賢そうな本を選んだ。</li>
+    <li>台所の音：濃紺・・・高校の国語の教科書に載っていた短編小説。気に入ったので購入。</li>
+    <li>高慢と偏見・・・誰の発言か分かりにくく最初とても読みにくいけどそのうち慣れる。王道ラブコメで面白い。</li>
 </ol>
 <h2>写真</h2>
 <div class="pictures">
    <img src="tamago.jpg" alt="東京タワーから見た夜景" />
-   <img src="qr.png" alt="QRコード" />
 <img src="https://i.imgur.com/pAQ7QKc.jpg" alt="高尾山から見た朝焼け" />
 </div>
        <h2>お問い合わせ</h2>
@@ -96,7 +95,8 @@
          <br />
          <textarea name="comment"></textarea>
          <br />
-         <input type="submit" value="送信する" />
+         <input type="submit" value="送信する" />QRコードはこちら↓
+         <img src="qr.png" alt="QRコード" />
        </form>
 </main>
 </body>
