--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
          <br />
          <textarea name="comment"></textarea>
          <br />
-         <input type="submit" value="送信する" />QRコードはこちら↓
-         <img src="qr.png" alt="QRコード" />
+         <input type="submit" value="送信する" /><br>QRコードはこちら↓
+         <br><img src="qr.png" alt="QRコード" />
        </form>
 </main>
 </body>
