--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
          <textarea name="comment"></textarea>
          <br />
          <input type="submit" value="送信する" /><br>QRコードはこちら↓
-         <br><img src="qr.png" alt="QRコード" />
+         <br><img src="qr.png" alt="QRコード"width="100" height="100" />
        </form>
 </main>
 </body>
