--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
          border-width: 4px;
          border-style: solid;
          border-color: gray;
-         width: 270px;
-         height: 150px;
+        
          border-radius: 5px;
        }
        main {
@@ -80,8 +79,10 @@
 </ol>
 <h2>写真</h2>
 <div class="pictures">
-   <img src="tamago.jpg" alt="東京タワーから見た夜景" />
-<img src="https://i.imgur.com/pAQ7QKc.jpg" alt="高尾山から見た朝焼け" />
+   <img src="tamago.jpg" alt="東京タワーから見た夜景"width="270px"
+   height="150px" />
+<img src="https://i.imgur.com/pAQ7QKc.jpg" alt="高尾山から見た朝焼け"width="270px"
+height="150px" />
 </div>
        <h2>お問い合わせ</h2>
        <form action="http://soasa.starfree.jp/form.php">
@@ -95,8 +96,8 @@
          <br />
          <textarea name="comment"></textarea>
          <br />
-         <input type="submit" value="送信する" /><br>QRコードはこちら↓
-         <br><img src="qr.png" alt="QRコード"width="100" height="100" />
+         <input type="submit" value="送信する" /><br><br>QRコードはこちら↓
+         <br><img src="qr.png" alt="QRコード" width="100px" height="100px" />
        </form>
 </main>
 </body>
