--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ height="150px" />
          <br />
          <textarea name="comment"></textarea>
          <br />
-         <input type="submit" value="送信する" /><br><br>QRコードはこちら↓
+         <input type="submit" value="送信する" /><br><br>👇QRコード
          <br><img src="qr.png" alt="QRコード" width="100px" height="100px" />
        </form>
 </main>
