--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
 </ol>
 <h2>写真</h2>
 <div class="pictures">
-   <img src="tamago.jpg" alt="東京タワーから見た夜景"width="270px"
-   height="150px" />
-<img src="https://i.imgur.com/pAQ7QKc.jpg" alt="高尾山から見た朝焼け"width="270px"
-height="150px" />
+   <img src="hotcake.JPG" alt="クリスクロスのホットケーキ"width="270px"
+   height="203px" />
+<img src="shiratama.JPG" alt="浅草の甘味屋さんの白玉"width="270px"
+height="203px" />
+<img src="amamityaya.JPG" alt="畑の茶屋弁当"width="270px"
+height="203px" />
 </div>
        <h2>お問い合わせ</h2>
        <form action="http://soasa.starfree.jp/form.php">
